--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -34,7 +34,7 @@
                     Jesus in ordinary religious homes.
                  </p>
              </li>
-             <li class='colored'>
+             <li class="colored">
                 <p>
                    Many of the character's design appeals to virtues that are, although hard to achieve in real life, very definitive for
                    us. At a young age, he lost his teacher Qui Gon in a heated battle with a strong enemy. He chose to take the responsibility
